--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dynamic-vite-base-template",
+  "name": "@dynamic-framework/dynamic-vite-base-template",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,14 +11,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "~19.1.1",
-    "react-dom": "~19.1.1"
+    "react": "~18.3.1",
+    "react-dom": "~18.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@types/node": "^24.6.0",
-    "@types/react": "~19.1.16",
-    "@types/react-dom": "~19.1.9",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^5.0.4",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
@@ -27,5 +27,8 @@
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
     "vite": "^7.1.7"
+  },
+  "engines": {
+    "node": ">=22.0.0"
   }
 }
