--- a/package.json
+++ b/package.json
@@ -8,11 +8,20 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "push": "npm run build && npx @modyo/cli@3.5.4 push",
+    "push:debug": "npm run build && DEBUG=* npx @modyo/cli@3.5.4 push",
+    "push:publish": "npm run build && npx @modyo/cli@3.5.4 push --publish"
   },
   "dependencies": {
+    "@dynamic-framework/ui-react": "^1.36.2",
+    "axios": "^1.12.2",
+    "classnames": "^2.5.1",
+    "i18next": "^23.6.0",
+    "liquidjs": "^10.9.3",
     "react": "~18.3.1",
-    "react-dom": "~18.2.0"
+    "react-dom": "~18.2.0",
+    "react-i18next": "~13.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
@@ -24,9 +33,11 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
+    "sass-embedded": "^1.93.2",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
-    "vite": "^7.1.7"
+    "vite": "^7.1.7",
+    "vite-plugin-svgr": "^4.5.0"
   },
   "engines": {
     "node": ">=22.0.0"
