--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "preview": "vite preview",
     "push": "npm run build && npx @modyo/cli@3.5.4 push",
     "push:debug": "npm run build && DEBUG=* npx @modyo/cli@3.5.4 push",
-    "push:publish": "npm run build && npx @modyo/cli@3.5.4 push --publish"
+    "push:publish": "npm run build && npx @modyo/cli@3.5.4 push --publish",
+    "stylelint": "stylelint 'src/**/*.css' 'src/**/*.scss' --rd"
   },
   "dependencies": {
     "@dynamic-framework/ui-react": "^1.36.2",
@@ -34,6 +35,8 @@
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
     "sass-embedded": "^1.93.2",
+    "stylelint": "^16.25.0",
+    "stylelint-config-twbs-bootstrap": "^16.1.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
     "vite": "^7.1.7",
