--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "push": "npm run build && npx @modyo/cli@3.5.4 push",
     "push:debug": "npm run build && DEBUG=* npx @modyo/cli@3.5.4 push",
     "push:publish": "npm run build && npx @modyo/cli@3.5.4 push --publish",
-    "stylelint": "stylelint 'src/**/*.css' 'src/**/*.scss' --rd"
+    "stylelint": "stylelint 'src/**/*.css' 'src/**/*.scss' --rd",
+    "lint-staged": "lint-staged"
   },
   "dependencies": {
     "@dynamic-framework/ui-react": "^1.36.2",
@@ -34,6 +35,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
+    "lint-staged": "^16.2.3",
     "sass-embedded": "^1.93.2",
     "stylelint": "^16.25.0",
     "stylelint-config-twbs-bootstrap": "^16.1.0",
