--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "stylelint": "stylelint 'src/**/*.css' 'src/**/*.scss' --rd",
     "lint-staged": "lint-staged",
     "commitlint": "commitlint --edit",
-    "prepare": "husky"
+    "prepare": "husky",
+    "test": "vitest"
   },
   "dependencies": {
     "@dynamic-framework/ui-react": "^1.36.2",
@@ -31,6 +32,9 @@
     "@commitlint/cli": "^20.1.0",
     "@commitlint/config-conventional": "^20.0.0",
     "@eslint/js": "^9.36.0",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^24.6.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
@@ -40,6 +44,7 @@
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
     "husky": "^9.1.7",
+    "jsdom": "^27.0.0",
     "lint-staged": "^16.2.3",
     "sass-embedded": "^1.93.2",
     "stylelint": "^16.25.0",
@@ -47,7 +52,8 @@
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
     "vite": "^7.1.7",
-    "vite-plugin-svgr": "^4.5.0"
+    "vite-plugin-svgr": "^4.5.0",
+    "vitest": "^3.2.4"
   },
   "engines": {
     "node": ">=22.0.0"
