--- a/package.json
+++ b/package.json
@@ -20,20 +20,23 @@
   },
   "dependencies": {
     "@dynamic-framework/ui-react": "^2.0.0",
+    "@tanstack/react-query": "^5.60.0",
     "axios": "^1.13.2",
     "classnames": "^2.5.1",
+    "framer-motion": "^12.23.26",
     "i18next": "^25.0.0",
     "liquidjs": "^10.24.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-hot-toast": "^2.6.0",
     "react-i18next": "^16.0.0",
-    "framer-motion": "^12.23.26",
-    "react-hot-toast": "^2.6.0"
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^20.1.0",
     "@commitlint/config-conventional": "^20.0.0",
     "@eslint/js": "^9.36.0",
+    "@tanstack/react-query-devtools": "^5.60.0",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
