--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "lint-staged": "lint-staged",
     "commitlint": "commitlint --edit",
     "prepare": "husky",
-    "test": "vitest"
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@dynamic-framework/ui-react": "^2.0.0",
