--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -14,14 +14,12 @@
       "vitest/globals"
     ],
     "skipLibCheck": true,
-    /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "verbatimModuleSyntax": true,
     "moduleDetection": "force",
     "noEmit": true,
     "jsx": "react-jsx",
-    /* Linting */
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
@@ -32,6 +30,6 @@
   "include": [
     "src",
     "tests/**/*",
-    "tests/setup.ts",
+    "tests/setup.ts"
   ]
 }
